--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "nuxt": "^3.2.3",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.7",
+    "pinia": "^2.0.33",
+    "uuid": "^9.0.0"
   }
 }
