--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.2.3",
     "postcss": "^8.4.21",
+    "sass": "^1.58.3",
+    "sass-loader": "10",
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.7",
+    "js-cookie": "^3.0.1",
     "pinia": "^2.0.33",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "uuid": "^9.0.0"
   }
 }
